Back to top button - added to styles

--- a/examples/preview.html
+++ b/examples/preview.html
@@ -23,6 +23,11 @@
     </header>
 
     <main class="container-xl">
+      <!-- back to top button -->
+      <section class="example-section my-5">
+        <h2>Typography</h2>
+        <button class="btn back-to-top">Back to Top</button>
+      </section>
       <!-- Typography Section -->
       <section class="example-section my-5">
         <h2>Typography</h2>
