--- a/examples/preview.html
+++ b/examples/preview.html
@@ -23,6 +23,109 @@
     </header>
 
     <main class="container-xl">
+      <!-- Accordion example -->
+      <section class="example-section my-5">
+        <h2>Accordion example</h2>
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseOne"
+                aria-expanded="true"
+                aria-controls="collapseOne"
+              >
+                Accordion Item #1
+              </button>
+            </h2>
+            <div
+              id="collapseOne"
+              class="accordion-collapse collapse show"
+              aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample"
+              style=""
+            >
+              <div class="accordion-body">
+                <strong>This is the first item's accordion body.</strong> It is
+                shown by default, until the collapse plugin adds the appropriate
+                classes that we use to style each element. These classes control
+                the overall appearance, as well as the showing and hiding via
+                CSS transitions. You can modify any of this with custom CSS or
+                overriding our default variables. It's also worth noting that
+                just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo"
+                aria-expanded="false"
+                aria-controls="collapseTwo"
+              >
+                Accordion Item #2
+              </button>
+            </h2>
+            <div
+              id="collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingTwo"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the second item's accordion body.</strong> It is
+                hidden by default, until the collapse plugin adds the
+                appropriate classes that we use to style each element. These
+                classes control the overall appearance, as well as the showing
+                and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth
+                noting that just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                Accordion Item #3
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingThree"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is
+                hidden by default, until the collapse plugin adds the
+                appropriate classes that we use to style each element. These
+                classes control the overall appearance, as well as the showing
+                and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth
+                noting that just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- back to top button -->
       <section class="example-section my-5">
         <h2>Typography</h2>
@@ -110,70 +213,6 @@
           </button>
         </div>
       </section>
-
-      <!-- Color System Section -->
-      <section class="example-section my-5">
-        <h2>Color System</h2>
-
-        <h3>Semantic Colors (Text)</h3>
-        <div>
-          <p class="text-primary">Primary text color</p>
-          <p class="text-secondary">Secondary text color</p>
-          <p class="text-info">Info text color</p>
-          <p class="text-success">Success text color</p>
-          <p class="text-warning">Warning text color</p>
-          <p class="text-danger">Danger text color</p>
-        </div>
-
-        <h3>Background Colors</h3>
-        <div class="color-preview bg-primary">Primary Background</div>
-        <div class="color-preview bg-secondary">Secondary Background</div>
-        <div class="color-preview bg-info">Info Background</div>
-        <div class="color-preview bg-success">Success Background</div>
-        <div class="color-preview bg-warning">Warning Background</div>
-        <div class="color-preview bg-danger">Danger Background</div>
-        <div class="color-preview bg-light">Light Background</div>
-        <div class="color-preview bg-dark">Dark Background</div>
-      </section>
-
-      <!-- Integration Examples -->
-      <section class="example-section my-5">
-        <h2>React Integration Example</h2>
-        <p>To use this theme in a React application:</p>
-
-        <pre><code>// In your React component or App.js
-import 'design-tokens-ntgcentral/dist/ntgcentral-theme.css';
-
-function MyComponent() {
-  return (
-    <div>
-      <h1>Welcome to NTG Central</h1>
-      <button className="btn btn-primary">Get Started</button>
-      <button className="btn btn-secondary">Learn More</button>
-    </div>
-  );
-}</code></pre>
-
-        <h3>Theme Switching</h3>
-        <p>For multi-theme support, load different theme CSS files:</p>
-
-        <pre><code>// Theme switcher implementation
-const themes = {
-  'ntgcentral': '/themes/ntgcentral-theme.css',
-  'central': '/themes/central-theme.css'
-};
-
-function switchTheme(themeName) {
-  const link = document.querySelector('link[data-theme]');
-  if (link) link.remove();
-  
-  const newLink = document.createElement('link');
-  newLink.rel = 'stylesheet';
-  newLink.href = themes[themeName];
-  newLink.setAttribute('data-theme', themeName);
-  document.head.appendChild(newLink);
-}</code></pre>
-      </section>
     </main>
 
     <footer class="container-xl">
@@ -182,6 +221,12 @@ function switchTheme(themeName) {
         ready
       </p>
     </footer>
+
+    <!-- Bootstrap 5.3.0 JavaScript Bundle from CDN -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
 
     <script>
       // Add some interactivity to demonstrate hover states
